# xclip-monitor

./: CMakeLists.txt  README.md  README_EN.md  xclip_monitor.c
